<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_addNote"
        android:orderInCategory="100"
        android:title="@string/action_addNote"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_orderItem"
        android:orderInCategory="100"
        android:title="@string/action_orderItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_showItem"
        android:orderInCategory="100"
        android:title="@string/action_showItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cleanNoteItem"
        android:orderInCategory="100"
        android:title="@string/action_cleanNoteItem"
        app:showAsAction="never" />

</menu>
