<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/notes_menu_meeting"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/notes_menu_memo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/notes_menu_anniversary"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/notes_menu_todolist"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_meeting"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/zero"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_menu"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/zero"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_anniversary"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/zero"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_todolist"
                android:padding="4dp"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:textSize="@dimen/abc_text_size_small_material"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/zero"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>